<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	
	<groupId>org.iglooproject.parents</groupId>
	<artifactId>igloo-parent-maven-configuration-common</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	
	<name>Igloo - Parent - Maven configuration - Common</name>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
		
		<jdk.version>1.8</jdk.version>
		<minimal.jdk.version>1.8</minimal.jdk.version>
		
		<!--
			Should be a valid artifact of type "signature"
			See http://search.maven.org/#search|ga|1|g%3A%22org.codehaus.mojo.signature%22
		 -->
		<jdk.signature.groupId>org.codehaus.mojo.signature</jdk.signature.groupId>
		<jdk.signature.artifactId>java18</jdk.signature.artifactId>
		<jdk.signature.version>1.0</jdk.signature.version>
		
		<minimal.maven.version>3.5.0</minimal.maven.version>
		
		<generated-sources.directory>target/generated-sources/apt</generated-sources.directory>
		<generated-sources-test.directory>target/generated-sources-test/apt</generated-sources-test.directory>
		
		<igloo.maven-toolchains-plugin.version>1.1</igloo.maven-toolchains-plugin.version>
		<igloo.maven-jgitflow-plugin.version>1.0-m5.1</igloo.maven-jgitflow-plugin.version>
		<igloo.maven-compiler-plugin.version>3.7.0</igloo.maven-compiler-plugin.version>
		<igloo.maven-resources-plugin.version>3.0.2</igloo.maven-resources-plugin.version>
		<igloo.maven-surefire-plugin.version>2.20.1</igloo.maven-surefire-plugin.version>
		<igloo.maven-surefire-plugin.argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m</igloo.maven-surefire-plugin.argLine>
		<igloo.maven-install-plugin.version>2.5.2</igloo.maven-install-plugin.version>
		<igloo.maven-war-plugin.version>3.2.0</igloo.maven-war-plugin.version>
		<igloo.maven-assembly-plugin.version>3.1.0</igloo.maven-assembly-plugin.version>
		<igloo.maven-jar-plugin.version>3.0.2</igloo.maven-jar-plugin.version>
		<igloo.maven-deploy-plugin.version>2.8.2</igloo.maven-deploy-plugin.version>
		<igloo.maven-source-plugin.version>3.0.1</igloo.maven-source-plugin.version>
		<igloo.maven-javadoc-plugin.version>3.0.0</igloo.maven-javadoc-plugin.version>
		<igloo.maven-enforcer-plugin.version>3.0.0-M1</igloo.maven-enforcer-plugin.version>
		<igloo.maven-dependency-plugin.version>3.0.2</igloo.maven-dependency-plugin.version>
		<igloo.animal-sniffer-maven-plugin.version>1.16</igloo.animal-sniffer-maven-plugin.version>
		<igloo.exec-maven-plugin.version>1.6.0</igloo.exec-maven-plugin.version>
		<igloo.maven-clean-plugin.version>3.0.0</igloo.maven-clean-plugin.version>
		<igloo.maven-site-plugin.version>3.7</igloo.maven-site-plugin.version>
		
		<igloo.wagon-maven-plugin.version>1.0</igloo.wagon-maven-plugin.version>
		<igloo.wagon-ssh-external-plugin.version>3.0.0</igloo.wagon-ssh-external-plugin.version>
		
		<igloo.maven-processor-plugin.version>3.3.2</igloo.maven-processor-plugin.version>
		<igloo.aspectj-maven-plugin.version>1.8</igloo.aspectj-maven-plugin.version>
		
		<!-- aspectj is used by allure -->
		<igloo.allure-aspectj.version>1.8.13</igloo.allure-aspectj.version>
		<igloo.allure-maven.version>2.9</igloo.allure-maven.version>
		<igloo.allure-junit4.version>2.0-BETA22</igloo.allure-junit4.version>
		<igloo.junit-dataprovider.version>1.13.1</igloo.junit-dataprovider.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-junit4</artifactId>
				<version>${igloo.allure-junit4.version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<groupId>com.fasterxml.jackson.module</groupId>
						<artifactId>jackson-module-jaxb-annotations</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.tngtech.java</groupId>
				<artifactId>junit-dataprovider</artifactId>
				<version>${igloo.junit-dataprovider.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>external.atlassian.jgitflow</groupId>
				<artifactId>jgitflow-maven-plugin</artifactId>
				<version>${igloo.maven-jgitflow-plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<flowInitContext>
						<masterBranchName>master</masterBranchName>
						<developBranchName>dev</developBranchName>
						<featureBranchPrefix>ft-</featureBranchPrefix>
						<releaseBranchPrefix>rl-</releaseBranchPrefix>
						<hotfixBranchPrefix>hf-</hotfixBranchPrefix>
						<versionTagPrefix>v</versionTagPrefix>
					</flowInitContext>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${igloo.maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<DependencyConvergence />
								<bannedDependencies>
									<excludes>
										<exclude>org.springframework:spring</exclude>
										<exclude>org.springframework:spring-ldap</exclude>
										<exclude>commons-logging:commons-logging</exclude>
										<exclude>cglib:cglib</exclude>
										<exclude>rhino:rhino</exclude>
										<exclude>rhino:js</exclude>
										<exclude>javassist:javassist</exclude>
										<exclude>xml-apis:xml-apis</exclude>
										<exclude>apache-xerces:xml-apis</exclude>
										<exclude>javax.servlet:servlet-api</exclude>
									</excludes>
								</bannedDependencies>
								<requireMavenVersion>
									<version>[${minimal.maven.version},)</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${minimal.jdk.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- Enforce code compatibility with the target JRE, even when building with a newer JDK.
				This ensures that none of the newer classes or methods that were not yet defined in the
				target JRE are referenced in this project.
				See https://maven.apache.org/guides/mini/guide-building-jdk14-on-jdk15.html
				
				Please be aware that code generation tools may be affected by the JDK used to compile, and thus
				may trigger a failure (because they automatically reference newer classes or methods). In this case,
				the only way to make things work is to use the proper JDK (use maven toolchains plugin).
			-->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>animal-sniffer-maven-plugin</artifactId>
				<version>${igloo.animal-sniffer-maven-plugin.version}</version>
				<executions>
					<execution>
						<id>check-java-version</id>
						<phase>compile</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<signature>
								<groupId>${jdk.signature.groupId}</groupId>
								<artifactId>${jdk.signature.artifactId}</artifactId>
								<version>${jdk.signature.version}</version>
							</signature>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>${jdk.signature.groupId}</groupId>
						<artifactId>${jdk.signature.artifactId}</artifactId>
						<version>${jdk.signature.version}</version>
						<type>signature</type>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-toolchains-plugin</artifactId>
					<version>${igloo.maven-toolchains-plugin.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>toolchain</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${igloo.maven-compiler-plugin.version}</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<compilerArgument>-proc:none</compilerArgument>
						<testCompilerArgument>-proc:none</testCompilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${igloo.maven-resources-plugin.version}</version>
					<configuration>
						<!--
						Par défaut, @ est utilisé comme délimiteur et ne peut pas être
						échappé correctement. Historiquement, nous n'avons jamais utilisé
						ces placeholders ; on les supprime donc de la configuration
						Voir MRESOURCES-141
						-->
						<delimiters>
							<delimiter>${*}</delimiter>
						</delimiters>
						<useDefaultDelimiters>false</useDefaultDelimiters>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>zip</nonFilteredFileExtension>
							<nonFilteredFileExtension>gz</nonFilteredFileExtension>
							<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
							<nonFilteredFileExtension>xls</nonFilteredFileExtension>
							<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
							<nonFilteredFileExtension>doc</nonFilteredFileExtension>
							<nonFilteredFileExtension>docx</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
							<nonFilteredFileExtension>jpeg</nonFilteredFileExtension>
							<nonFilteredFileExtension>gif</nonFilteredFileExtension>
							<nonFilteredFileExtension>png</nonFilteredFileExtension>
							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
							<nonFilteredFileExtension>psd</nonFilteredFileExtension>
							<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
							<!-- Fichier de licence Alfresco -->
							<nonFilteredFileExtension>lic</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${igloo.maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>${igloo.maven-surefire-plugin.argLine}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${igloo.maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${igloo.maven-war-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${igloo.maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${igloo.maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${igloo.maven-deploy-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${igloo.maven-source-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${igloo.maven-javadoc-plugin.version}</version>
					<configuration>
						<additionalparam>-Xdoclint:none</additionalparam>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>${igloo.maven-processor-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${igloo.maven-dependency-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${igloo.maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${igloo.maven-site-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>wagon-maven-plugin</artifactId>
					<version>${igloo.wagon-maven-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.wagon</groupId>
							<artifactId>wagon-ssh-external</artifactId>
							<version>${igloo.wagon-ssh-external-plugin.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				
				<!--
				This plugin's configuration is used to skip plugin executions in Eclipse m2e only.
				It has no influence on the Maven build itself.
				It has no influence when running goals explicitely (as a Run Configuration) from Eclipse, either.
				-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${igloo.exec-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>io.qameta.allure</groupId>
					<artifactId>allure-maven</artifactId>
					<version>${igloo.allure-maven.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
		<profile>
			<id>sonar-branch</id>
			<activation>
				<property>
					<name>sonar.projectBranch</name>
				</property>
			</activation>
			<properties>
				<sonar.projectKey>${project.groupId}:${project.artifactId}:${sonar.projectBranch}</sonar.projectKey>
				<sonar.projectName>${project.name} (${sonar.projectBranch})</sonar.projectName>
			</properties>
		</profile>
		<!-- profile example to switch toolchain and animal sniffer target version; no longer used -->
		<profile>
			<id>jdk8</id>
			<activation>
				<property>
					<name>jdk8</name>
				</property>
			</activation>
			<properties>
				<jdk.signature.groupId>org.codehaus.mojo.signature</jdk.signature.groupId>
				<jdk.signature.artifactId>java18</jdk.signature.artifactId>
				<jdk.signature.version>1.0</jdk.signature.version>
				<jdk.version>1.8</jdk.version>
				<maven.compiler.source>1.8</maven.compiler.source>
				<maven.compiler.target>1.8</maven.compiler.target>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-toolchains-plugin</artifactId>
						<configuration>
							<toolchains>
								<jdk>
									<version>1.8</version>
								</jdk>
							</toolchains>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>allure</id>
			<activation>
				<property>
					<name>allure.enabled</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<!-- override junit behavior with allure-junit4 + aspectj -->
				<!-- configure allure-junit4 output -->
				<!-- add allure-maven plugin as executor.json file generated during report phase is needed for aggregation -->
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${igloo.maven-surefire-plugin.version}</version>
						<configuration>
							<argLine>
								-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${igloo.allure-aspectj.version}/aspectjweaver-${igloo.allure-aspectj.version}.jar"
							</argLine>
							<properties>
								<property>
									<name>listener</name>
									<value>io.qameta.allure.junit4.AllureJunit4</value>
								</property>
							</properties>
							<systemProperties>
								<property>
									<name>allure.results.directory</name>
									<value>${project.build.directory}/allure-results</value>
								</property>
								<property>
									<!-- TODO: configure issue URL -->
									<name>allure.link.issue.pattern</name>
									<value>https://example.org/issue/{}</value>
								</property>
							</systemProperties>
						</configuration>
						<dependencies>
							<dependency>
								<groupId>org.aspectj</groupId>
								<artifactId>aspectjweaver</artifactId>
								<version>${igloo.allure-aspectj.version}</version>
							</dependency>
						</dependencies>
					</plugin>
					<plugin>
						<groupId>io.qameta.allure</groupId>
						<artifactId>allure-maven</artifactId>
					</plugin>
				</plugins>
			</build>
			<reporting>
				<excludeDefaults>true</excludeDefaults>
				<plugins>
					<plugin>
						<groupId>io.qameta.allure</groupId>
						<artifactId>allure-maven</artifactId>
						<version>${igloo.allure-maven.version}</version>
						<reportSets>
							<reportSet>
								<reports>
									<report>report</report>
								</reports>
							</reportSet>
						</reportSets>
					</plugin>
				</plugins>
			</reporting>
		</profile>
	</profiles>
	
	<distributionManagement>
		<repository>
			<id>nexus-igloo-releases</id>
			<name>Nexus Igloo Releases</name>
			<url>https://nexus.tools.kobalt-si.fr/repository/igloo-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus-igloo-snapshots</id>
			<name>Nexus Igloo Snapshots</name>
			<url>https://nexus.tools.kobalt-si.fr/repository/igloo-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	
</project>
